trunk/Archive2/4a/eea69bd47d6eeb/output
main.cpp:11:23: error: expected type-specifier
     using our_clock = chrono::system_clock::system_clock;
                       ^
main.cpp:12:38: error: 'our_clock' was not declared in this scope
     using shared_delay = std::atomic<our_clock::duration>;
                                      ^
main.cpp:12:57: error: template argument 1 is invalid
     using shared_delay = std::atomic<our_clock::duration>;
                                                         ^
main.cpp:19:9: error: 'our_clock' does not name a type
         our_clock::time_point _deadline; 
         ^
main.cpp:22:16: error: 'our_clock' has not been declared
         Worker(our_clock::time_point deadline) : _deadline(deadline) {}
                ^
main.cpp:22:38: error: expected ')' before 'deadline'
         Worker(our_clock::time_point deadline) : _deadline(deadline) {}
                                      ^
main.cpp: In member function 'void demo::Worker::operator()() const':
main.cpp:26:32: error: '_deadline' was not declared in this scope
             _cv.wait_until(lk, _deadline, [this] 
                                ^
main.cpp: In lambda function:
main.cpp:29:36: error: 'our_clock' has not been declared
                         auto now = our_clock::now();
                                    ^
main.cpp:30:36: error: '_deadline' is not captured
                         if (now >= _deadline)
                                    ^
main.cpp:32:110: error: '_deadline' is not captured
                         std::cout << "worker: Still waiting " << chrono::duration_cast<chrono::milliseconds>(_deadline - now).count() << "ms...\n"; 
                                                                                                              ^
main.cpp: In function 'int main()':
main.cpp:44:19: error: 'our_clock' has not been declared
     Worker worker(our_clock::now() + chrono::seconds(2));
                   ^
main.cpp:54:16: error: 'struct demo::Worker' has no member named '_deadline'
         worker._deadline = our_clock::now() + chrono::seconds(1);
                ^
main.cpp:54:28: error: 'our_clock' has not been declared
         worker._deadline = our_clock::now() + chrono::seconds(1);
                            ^
